--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <article class = "service">
                     <div class = "service-icon">
                         <span>
-                            <i class = "fas fa-swimming-pool"></i>
+                            <i class="fas fa-coffee"></i>
                         </span>
                     </div>
                     <div class = "service-content">
